@@ -6,7 +6,9 @@ import org.apache.commons.lang.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+//import java.util.stream.Collectors;
+
+import static java.lang.String.format;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +25,7 @@ public class CustomerService {
   public void updateCustomer(CustomerRequest request) {
     var customer = this.repository.findById(request.id())
         .orElseThrow(() -> new CustomerNotFoundException(
-            String.format("Cannot update customer:: No customer found with the provided ID: %s", request.id())
+            format("Cannot update customer:: No customer found with the provided ID: %s", request.id())
         ));
     mergeCustomer(customer, request);
     this.repository.save(customer);
@@ -32,6 +34,9 @@ public class CustomerService {
   private void mergeCustomer(Customer customer, CustomerRequest request) {
     if (StringUtils.isNotBlank(request.firstname())) {
       customer.setFirstname(request.firstname());
+    }
+    if (StringUtils.isNotBlank(request.lastname())) {
+      customer.setLastname(request.lastname());
     }
     if (StringUtils.isNotBlank(request.email())) {
       customer.setEmail(request.email());
@@ -45,18 +50,21 @@ public class CustomerService {
     return  this.repository.findAll()
         .stream()
         .map(this.mapper::fromCustomer)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public CustomerResponse findById(String id) {
     return this.repository.findById(id)
         .map(mapper::fromCustomer)
-        .orElseThrow(() -> new CustomerNotFoundException(String.format("No customer found with the provided ID: %s", id)));
+        .orElseThrow(
+                () -> new CustomerNotFoundException(
+                        format("No customer found with the provided ID: %s", id)
+                )
+        );
   }
 
   public boolean existsById(String id) {
-    return this.repository.findById(id)
-        .isPresent();
+    return this.repository.findById(id).isPresent();
   }
 
   public void deleteCustomer(String id) {
